# rsground

./: Cargo.toml  flake.nix  justfile
backend/: Cargo.toml  README.md
backend/runner/: .gitignore  Cargo.toml
backend/runner/src/: error.rs  lib.rs  main.rs
backend/runner/tests/: cargo.rs  rust.rs  rust_analyzer.rs  simple.rs
backend/runner/tests/common/: cargo.rs  mod.rs
backend/src/: main.rs  state.rs
backend/src/auth/: handlers.rs  mod.rs
backend/src/middleware/: jwt.rs
backend/src/models/: document.rs  file_node.rs  mod.rs  project.rs
backend/src/routes/: sessions.rs
backend/src/utils/: analyzer.rs  communication.rs  logger.rs  mod.rs  runner.rs
backend/src/ws/: mod.rs  websocket.rs
backend/tests/: integration_test.rs
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/fonts/: inter.css
frontend/src/: App.sass  App.tsx
frontend/src/components/: SelectField.module.sass  SelectField.tsx  Switchbox.module.sass  Switchbox.tsx  TextField.module.sass  TextField.tsx
frontend/src/core/colab/: Colab.module.sass  Colab.tsx  index.ts  store.ts
frontend/src/core/context-menu/: ContextMenu.module.sass  ContextMenu.tsx  store.ts
frontend/src/core/panels/: CodePanel.module.sass  CodePanel.tsx  OutputPanel.module.sass  OutputPanel.tsx  Panels.module.sass  Panels.tsx  dockview.sass  index.ts  store.ts
frontend/src/core/sidebar/: Sidebar.module.sass  Sidebar.tsx  store.ts  style.module.sass
frontend/src/core/sidebar/file-explorer/: FileExplorer.module.sass  FileExplorer.tsx  index.ts  store.ts
