[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rsground-runner = { path = "./runner" }

actix-web = "4"
actix-web-actors = "4"
actix = "0.13"
futures = "0.3"
oauth2 = { version = "4", features = ["reqwest"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.15", features = ["json", "default-tls"] }
jsonwebtoken = "8"
chrono = "0.4"
serde_json = "1.0"
cola = "0.5.0"
log = "0.4"
env_logger = "0.11.7"
uuid = { version = "1.3", features = ["serde", "v4"] }

# para los tests de integracion
awc = "3" # Cliente HTTP y WebSocket para Actix
actix-rt = { version = "2.10.0", features = ["macros"] }
futures-util = "0.3"
lazy_static = "1.4"
once_cell = "1.17"