[package]
name = "rsground-runner"
version = "0.1.0"
description = "The runner engine for RsGround"
edition = "2021"
authors = ["Apika Luca"]

[lib]
test = true

[dependencies]
hakoniwa = "1.1.0"
thiserror = { workspace = true }
tokio = { version = "1.44.1", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
